--- a/ports/glbinding/CONTROL
+++ b/ports/glbinding/CONTROL
@@ -1,3 +1,4 @@
 Source: glbinding
-Version: 3.1.0
+Version: 3.1.0-1
 Description: glbinding is an MIT licensed, cross-platform C++ binding for the OpenGL API
+Build-Depends: egl-registry
