--- a/ports/librdkafka/CONTROL
+++ b/ports/librdkafka/CONTROL
@@ -1,8 +1,7 @@
 Source: librdkafka
-Version: 2019-06-13
+Version: 1.1.0
 Description: The Apache Kafka C/C++ library
 Homepage: https://github.com/edenhill/librdkafka
-Default-Features: ssl
 
 Feature: lz4
 Description: Enable external LZ4 library support 
