[OpenMPI] add a new port (#7142)
* [OpenMPI] add a new port

* [OpenMPI] enable VCPKG_CONCURRENCY

* [OpenMPI] fix prefix

* [OpenMPI] fix license installation, compatible with single config build

* [many ports] enable portable mpi implementation

* [bond] Update Haskell stack SHA512

--- a/ports/hypre/CONTROL
+++ b/ports/hypre/CONTROL
@@ -2,4 +2,4 @@ Source: hypre
 Version: 2.11.2-2
 Homepage: https://computation.llnl.gov/projects/hypre-scalable-linear-solvers-multigrid-methods
 Description: SCALABLE LINEAR SOLVERS AND MULTIGRID METHODS
-Build-Depends: msmpi
+Build-Depends: mpi
