--- a/ports/parmetis/CONTROL
+++ b/ports/parmetis/CONTROL
@@ -2,4 +2,4 @@ Source: parmetis
 Version: 4.0.3-3
 Homepage: https://glaros.dtc.umn.edu/gkhome/metis/parmetis/overview
 Description: Parallel Graph Partitioning and Fill-reducing Matrix Ordering
-Build-Depends: metis, msmpi
+Build-Depends: metis, mpi
