--- a/ports/sdl2-mixer/CMakeLists.txt
+++ b/ports/sdl2-mixer/CMakeLists.txt
@@ -16,7 +16,9 @@ if(SDL_MIXER_ENABLE_MP3)
     find_library(MPG123_LIBRARY NAMES libmpg123 mpg123)
     list(APPEND SDL_MIXER_INCLUDES ${MPG123_INCLUDE_DIR})
     list(APPEND SDL_MIXER_DEFINES MUSIC_MP3_MPG123)
-    list(APPEND SDL_MIXER_LOAD_DEFINES -DMPG123_DYNAMIC="${MPG123_LIBRARY}")
+    get_filename_component(MPG123_LIBRARY_NAME "${MPG123_LIBRARY}" NAME)
+    message("MPG123_LIBRARY_NAME: ${MPG123_LIBRARY_NAME}")
+    list(APPEND SDL_MIXER_LOAD_DEFINES -DMPG123_DYNAMIC="${MPG123_LIBRARY_NAME}")
 endif()
 
 # FLAC support
@@ -25,7 +27,8 @@ if(SDL_MIXER_ENABLE_FLAC)
     find_library(FLAC_LIBRARY FLAC)
     list(APPEND SDL_MIXER_INCLUDES ${FLAC_INCLUDE_DIR})
     list(APPEND SDL_MIXER_DEFINES MUSIC_FLAC)
-    list(APPEND SDL_MIXER_LOAD_DEFINES -DFLAC_DYNAMIC="${FLAC_LIBRARY}")
+    get_filename_component(FLAC_LIBRARY_NAME "${FLAC_LIBRARY}" NAME)
+    list(APPEND SDL_MIXER_LOAD_DEFINES -DFLAC_DYNAMIC="${FLAC_LIBRARY_NAME}")
 endif()
 
 # MOD support
@@ -34,7 +37,8 @@ if(SDL_MIXER_ENABLE_MOD)
     find_library(MODPLUG_LIBRARY modplug)
     list(APPEND SDL_MIXER_INCLUDES ${MODPLUG_INCLUDE_DIR})
     list(APPEND SDL_MIXER_DEFINES MUSIC_MOD_MODPLUG)
-    list(APPEND SDL_MIXER_LOAD_DEFINES -DMODPLUG_DYNAMIC="${MODPLUG_LIBRARY}")
+    get_filename_component(MODPLUG_LIBRARY_NAME "${MODPLUG_LIBRARY}" NAME)
+    list(APPEND SDL_MIXER_LOAD_DEFINES -DMODPLUG_DYNAMIC="${MODPLUG_LIBRARY_NAME}")
 endif()
 
 # Ogg-Vorbis support
@@ -43,7 +47,8 @@ if(SDL_MIXER_ENABLE_OGGVORBIS)
     find_library(VORBISFILE_LIBRARY vorbisfile)
     list(APPEND SDL_MIXER_INCLUDES ${VORBIS_INCLUDE_DIR})
     list(APPEND SDL_MIXER_DEFINES MUSIC_OGG)
-    list(APPEND SDL_MIXER_LOAD_DEFINES -DOGG_DYNAMIC="${VORBISFILE_LIBRARY}")
+    get_filename_component(VORBISFILE_LIBRARY_NAME "${VORBISFILE_LIBRARY}" NAME)
+    list(APPEND SDL_MIXER_LOAD_DEFINES -DOGG_DYNAMIC="${VORBISFILE_LIBRARY_NAME}")
 endif()
 
 # Opus support
@@ -52,7 +57,8 @@ if(SDL_MIXER_ENABLE_OPUS)
     find_library(OPUSFILE_LIBRARY opusfile)
     list(APPEND SDL_MIXER_INCLUDES ${OPUS_INCLUDE_DIR})
     list(APPEND SDL_MIXER_DEFINES MUSIC_OPUS)
-    list(APPEND SDL_MIXER_LOAD_DEFINES -DOPUS_DYNAMIC="${OPUSFILE_LIBRARY}")
+    get_filename_component(OPUSFILE_LIBRARY_NAME "${OPUSFILE_LIBRARY}" NAME)
+    list(APPEND SDL_MIXER_LOAD_DEFINES -DOPUS_DYNAMIC="${OPUSFILE_LIBRARY_NAME}")
 endif()
 
 add_library(SDL2_mixer
